// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish Test File via Babel xx: cjs 1`] = `
"/*! jsx-react v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var React = require('react');
var reactIntl = require('react-intl');
var Header = require('components/Header');

function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e['default'] : e; }

var React__default = /*#__PURE__*/_interopDefaultLegacy(React);
var Header__default = /*#__PURE__*/_interopDefaultLegacy(Header);

/* eslint-disable import/no-unresolved */
function MyPage() {
  return /*#__PURE__*/React__default.createElement(React__default.Fragment, null, /*#__PURE__*/React__default.createElement(Header__default, null, \\"Title\\"), /*#__PURE__*/React__default.createElement(\\"button\\", {
    type: \\"submit\\"
  }, /*#__PURE__*/React__default.createElement(reactIntl.FormattedMessage, {
    id: \\"press-button\\"
  })));
}

exports.MyPage = MyPage;
//# sourceMappingURL=index.cjs.js.map
"
`;

exports[`Publish Test File via Babel xx: esm 1`] = `
"/*! jsx-react v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
import React from 'react';
import { FormattedMessage } from 'react-intl';
import Header from 'components/Header';

/* eslint-disable import/no-unresolved */
function MyPage() {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(Header, null, \\"Title\\"), /*#__PURE__*/React.createElement(\\"button\\", {
    type: \\"submit\\"
  }, /*#__PURE__*/React.createElement(FormattedMessage, {
    id: \\"press-button\\"
  })));
}

export { MyPage };
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`Publish Test File via Babel xx: umd 1`] = `
"/*! jsx-react v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports, require('react'), require('react-intl'), require('components/Header')) :
  typeof define === 'function' && define.amd ? define(['exports', 'react', 'react-intl', 'components/Header'], factory) :
  (global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global['jsx-react'] = {}, global.React, global.reactIntl, global.Header));
}(this, (function (exports, React, reactIntl, Header) { 'use strict';

  function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e['default'] : e; }

  var React__default = /*#__PURE__*/_interopDefaultLegacy(React);
  var Header__default = /*#__PURE__*/_interopDefaultLegacy(Header);

  /* eslint-disable import/no-unresolved */
  function MyPage() {
    return /*#__PURE__*/React__default.createElement(React__default.Fragment, null, /*#__PURE__*/React__default.createElement(Header__default, null, \\"Title\\"), /*#__PURE__*/React__default.createElement(\\"button\\", {
      type: \\"submit\\"
    }, /*#__PURE__*/React__default.createElement(reactIntl.FormattedMessage, {
      id: \\"press-button\\"
    })));
  }

  exports.MyPage = MyPage;

  Object.defineProperty(exports, '__esModule', { value: true });

})));
//# sourceMappingURL=index.umd.js.map
"
`;
